--- a/src/App.scss
+++ b/src/App.scss
@@ -55,3 +55,28 @@ a {
   padding: 2em 2em;
   border-radius: 15px;
 }
+
+.dashboard-container {
+--bs-gutter-x: 0rem !important; 
+}
+
+.side-menu {
+  width: 15%;
+  height: 100vh;
+  float: left;
+  background-color: green;
+
+}
+
+.dashboard-content {
+  width: 85%;
+  height: 100vh;
+  float: left;
+  background-color: yellow;
+}
+
+.dashboard-content-header {
+  width: 100%;
+  height: 10%;
+  background-color: aquamarine;
+}
