added some more changes

--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -1,40 +1,82 @@
 $header-height: 8%;
-$dashboard-page-bg-color: rgba(240, 240, 240, .5);
-$side-menu-bg-color: #fff;
+$dashboard-page-bg-color: rgba(191, 35, 35, 0.5);
+$side-menu-bg-color: #144E2F;
 $header-bg-color: #fff;
 $border-color: rgba(140, 140, 140, .5);
 
 .side-menu  {
+    padding-top: 5vh;
     width: 15%;
     height: 100vh;
     float: left;
     background-color: $side-menu-bg-color;
     border-right: 1px solid $border-color;
-    ul {
-        list-style: none;
-        text-align: left;
-        li {
+
+        div {
+            padding: 1em 0em 1em 1em;
             text-align: left !important;
             padding-bottom: .5em;
             cursor: pointer;
+            width: 100%;
+            display: flex;
+            align-items: center;
+
+            .side-menu-item {
+                padding-left: 1em;
+                text-align: left;
+                color: #fff;
+                font-weight: 700;
+                text-transform: uppercase;
+
+            }
+
+            .awesome-icon {
+                width: 1em;
+                height: 1.5em;
+                color: #fff;
+                margin: auto 0;
+            }
+
+        &:hover {
+            background-color: #fff;
+            transition: background-color .2s ease-in-out;
+
+            .side-menu-item {
+                color: #144E2F;
+            }
+
+            .awesome-icon {
+                color: #EFC907;
+            }
+
         }
     }
+    
 }
+
+
 
 .dashboard-header {
     width: 100%;
     height: $header-height;
-    border-bottom: 1px solid $border-color;
 }
 .dashboard-content {
     width: 100%;
     height: 100vh;
-    float: left;
     background-color: #fff;
+    position: relative;
   }
   
   .dashboard-page {
-    width: 100%;
+    width: 85%;
     height: 100vh;
-    background-color: $dashboard-page-bg-color;
+    float: left;
+    padding-left: 6%;
+    padding-right: 6%;
+    background-image: url('./../../assets/bg-images/dashboard-page-bg.svg');
+    background-repeat: no-repeat;
+
+    .username {
+        padding-right: 1em;
+    }
   }
