updated faker module

--- a/src/App.scss
+++ b/src/App.scss
@@ -56,4 +56,9 @@ a {
   border-radius: 15px;
 }
 
+.chart-background-colors {
+  background: linear-gradient(to bottom, #0e4d2b, #7dbb6a 50%, #3d8e4d);
+  color: #fff;
+
+}
 
