--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -59,6 +59,7 @@ $border-color: rgba(140, 140, 140, .5);
 .dashboard-header {
     width: 100%;
     height: $header-height;
+    color: 144E2F;
 }
 .dashboard-content {
     width: 100%;
@@ -78,5 +79,6 @@ $border-color: rgba(140, 140, 140, .5);
 
     .username {
         padding-right: 1em;
+        color: #144E2F;
     }
   }
