--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -83,6 +83,8 @@ $border-color: rgba(140, 140, 140, .5);
     }
   }
 
-  .quick-details {
+  .summary-details {
+    position: relative;
     margin-top: 2em;
+    gap: 2em;
   }
