--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,9 @@
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
 
 .container, .container-fluid, .container-xxl, .container-xl, .container-lg, .container-md, .container-sm {
