added changes to the credentials page

--- a/src/components/credentials/credentials.scss
+++ b/src/components/credentials/credentials.scss
@@ -4,9 +4,10 @@
     border: none;
     padding: 3em 3em;
     border-radius: 10px;
-    background-color: rgba($color: #05371c, $alpha: .9);
+    background-color: rgba($color: #000201, $alpha: .6);
     box-shadow: 3px 3px 5px rgba(0,0,0,0.5);
   }
+
   .sign-login-div input {
     padding: 3%;
     margin: auto;
@@ -18,12 +19,44 @@
     color: white;
     font-weight: 600;
   }
-  .sign-login-div input::placeholder {
-    color: #FFFFFF;
+
+  .form-control:focus {
+    background-color: blueviolet;
   }
+
+  .sign-login-div input::placeholder {
+    color: #FFFFFFEE;
+  }
+
   .sign-login-div input:focus {
     outline: none;
     background-color: transparent;
     color: #fff;
+    border: none;
+  }
+
+.credential-button {
+  width: 100% !important;
+  font-weight: 500;
+
+}
+
+.signup-button {
+    margin-top: 7%;
+    border: none;
+    height: 50px;
+    background-color: #DDDDDD;
+    color: #144E2F;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+    float: left;
+    position: relative;
+  }
+  
+  .signup-button:hover {
+    background-color: #ffffff;
+    color: black;
+  }
+
+  input:focus {
     border: none;
   }
