--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, arial, sans-serif;
+  font-weight: 400;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
