--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -76,6 +76,7 @@ $border-color: rgba(140, 140, 140, .5);
     padding-right: 6%;
     background-image: url('./../../assets/bg-images/dashboard-page-bg.svg');
     background-repeat: no-repeat;
+    overflow-y: auto;
 
     .username {
         padding-right: 1em;
