--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 .App {
   text-align: center;
   height: 100vh;
-  background-image: url('./assets/bg-images/Backgrounds-04-03.svg');
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -21,10 +21,11 @@ a {
 /* credentials component css */
 
 .chart-background-colors {
-  background: rgba($color: #f6f6f6, $alpha: 1);;
+  padding: 50px;
+  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
   color: #fff;
-  box-shadow: 3px 3px 8px rgba($color: #000000, $alpha: .3);
-  border-radius:  5px;
+  box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
+  border-radius:  10px;
   text-align: center;
   width: 100%;
   height: 30vh;
