changes to the sign up

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@
 
 
 a {
-  color: rgb(10, 130, 52) !important;
+  color: #250844 !important;
   text-decoration: none !important;
   cursor: pointer;
 }
