--- a/src/components/credentials/credentials.scss
+++ b/src/components/credentials/credentials.scss
@@ -4,7 +4,7 @@
     border: none;
     padding: 3em 3em;
     border-radius: 10px;
-    background-color: rgba($color: #000201, $alpha: .6);
+    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     box-shadow: 3px 3px 5px rgba(0,0,0,0.5);
   }
 
@@ -45,8 +45,8 @@
     margin-top: 7%;
     border: none;
     height: 50px;
-    background-color: #DDDDDD;
-    color: #144E2F;
+    background-color: #250844;
+    color: #fff;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
     float: left;
     position: relative;
