changes to table

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -26,20 +26,29 @@ h6 {
     padding: 10px 16px;
 }
 table {
-    margin: 0.5em;
-}
-
-tr {
     width: 100%;
+    margin: 0.5em;
+    background-color: green;
+
+    tr {
+        width: 100%;
+        background-color: red;
+    }
+
+    th {
+        display: block;
+        text-align: left;
+        float: left;
+        width: 33%;
+        background-color: rgba($color: #000000, $alpha: .6);
+    }
+
+
 }
 
-th {
-    display: block;
-    text-align: left;
-    float: left;
-    width: 35%;
-    background-color: rgba($color: #000000, $alpha: .6);
-}
+
+
+
 
 td {
     display: block;
