changes to top nav text

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,8 +13,8 @@
 
 
 a {
-  color: #250844 !important;
-  text-decoration: none !important;
+  color: rgb(107, 121, 209) !important;
+  text-decoration: underline !important;
   cursor: pointer;
 }
 
