--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -21,10 +21,12 @@
     float: left;
     color: #fff;
 }
+
 h6 {
     text-align: left;
     padding: 10px 16px;
 }
+
 table {
     width: 100%;
     margin: 0.5em;
@@ -37,7 +39,7 @@ table {
         display: block;
         text-align: left;
         float: left;
-        width: 33%;
+        width: 30%;
         background-color: rgba($color: #000000, $alpha: .6);
     }
 
@@ -50,6 +52,18 @@ table {
         border-bottom: 0.1em solid #bbb;
     }
 
+}
+
+.top-product-table {
+
+    td {
+        width: 30%;
+        margin-top: 0.5em;
+        text-align: left;
+        float: left;
+        margin-bottom: 1em;
+        border-bottom: 0.1em solid #bbb;
+    }
 }
 
 
