--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,35 +1,41 @@
 .quick-details-content {
-    width: 20vw;
+    width: 25vw;
     height: 45vh;
     border-radius: 10px;
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
     background-repeat: no-repeat;
-    padding: 1em;
+    padding: 2em;
     float: right;
     color: #fff;
     margin: auto;
 }
 
 .top-products-content {
-    width: 35vw;
+    width: 45vw;
     height: 45vh;
     border-radius: 10px;
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
     background-repeat: no-repeat;
-    padding: 1em;
+    padding: 2em;
     float: left;
     color: #fff;
+    margin: auto;
 }
 
 h6 {
+    width: 90%;
+    height: 4vh;
+    margin: auto;
+    padding-right: 0.5em;
     text-align: left;
-    padding: 10px 16px;
 }
 
 table {
-    width: 100%;
-    margin: 0.5em;
+    width: 90%;
+    margin: auto;
+    padding-right: 0.5em;
 
     tr {
         width: 100%;
@@ -39,7 +45,7 @@ table {
         display: block;
         text-align: left;
         float: left;
-        width: 30%;
+        width: 32%;
         background-color: rgba($color: #000000, $alpha: .6);
     }
 
@@ -57,7 +63,7 @@ table {
 .top-product-table {
 
     td {
-        width: 30%;
+        width: 32%;
         margin-top: 0.5em;
         text-align: left;
         float: left;
