adds changes to partners section in dashboard

--- a/src/App.scss
+++ b/src/App.scss
@@ -51,3 +51,12 @@ a {
   width: 100%;
   clear: both;
 }
+
+footer {
+clear: both;
+font-weight: 500;
+  p {
+    color:#764BA2;
+    margin: .3em 0em;
+  }
+}
