--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -3,7 +3,7 @@
     height: 45vh;
     border-radius: 10px;
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-    box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
+    box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
     background-repeat: no-repeat;
     padding: 2em;
     float: right;
@@ -16,7 +16,7 @@
     height: 45vh;
     border-radius: 10px;
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-    box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
+    box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
     background-repeat: no-repeat;
     padding: 2em;
     float: left;
@@ -80,7 +80,42 @@ table {
     background-color: transparent;
     color: #ffffff;
 }
+
 .click-for-more :hover {
     border-bottom: 1px solid #bbb;
     color: rgb(239, 175, 185);
+}
+
+.card-content {
+    background-color: #F1F1F1;
+    width: 25%;
+    height: 100%;
+    border-radius: 5px;
+    box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
+    float: left;
+    padding: 1.3em;
+
+    .heading {
+        text-align: center;
+        color: #764BA2;
+        text-transform: uppercase;
+    }
+
+    .name {
+        text-align: left;
+        color: #764BA2;
+        font-weight: 600;
+    }
+
+    .email {
+        text-align: left;
+        color: #764BA2;
+    }
+
+    img {
+        margin: .6em auto;
+        border-radius: 50%;
+        width: 8em;
+        height: 8em;
+    }
 }
