--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -91,4 +91,16 @@ $border-color: rgba(140, 140, 140, .5);
     margin-top: 2em;
     gap: 2em;
   }
+
+  .partners-text {
+    text-align: left;
+    color: #764BA2;
+  }
   
+  .card-div {
+    width: 100%;
+    height: 40vh;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+  }
