--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,6 +1,6 @@
 .quick-details-content {
-    width: 25vw;
-    height: 45vh;
+    width: 29vw;
+    height: 62vh;
     border-radius: 10px;
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
@@ -12,8 +12,8 @@
 }
 
 .top-products-content {
-    width: 45vw;
-    height: 45vh;
+    width: 41vw;
+    height: 62vh;
     border-radius: 10px;
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
@@ -70,6 +70,15 @@ table {
         margin-bottom: 1em;
         border-bottom: 0.1em solid #bbb;
     }
+
+    .stock {
+        background-color: #F4D951;
+        border: 2px solid black;
+        border-radius: 20px;
+        padding: 5px;
+        border-width: 1px;
+      }
+      
 }
 
 
