--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,6 +1,6 @@
 .quick-details-content {
     width: 29vw;
-    height: 62vh;
+    height: 68vh;
     border-radius: 10px;
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
@@ -13,7 +13,7 @@
 
 .top-products-content {
     width: 41vw;
-    height: 62vh;
+    height: 68vh;
     border-radius: 10px;
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
@@ -25,7 +25,6 @@
 }
 
 h6 {
-    width: 90%;
     height: 4vh;
     margin: auto;
     padding-right: 0.5em;
@@ -33,12 +32,12 @@ h6 {
 }
 
 table {
-    width: 90%;
-    margin: auto;
-    padding-right: 0.5em;
+    width: 100%;
+    margin: auto;   
 
     tr {
         width: 100%;
+
     }
 
     th {
@@ -62,22 +61,39 @@ table {
 
 .top-product-table {
 
+    th {
+        text-align: left;
+        width: 32%;
+        background-color: rgba($color: #000000, $alpha: .6);
+        padding: .5em 1em .5em 1em;
+    }
+
     td {
         width: 32%;
-        margin-top: 0.5em;
+        margin: 0.5em auto;
         text-align: left;
         float: left;
         margin-bottom: 1em;
+        padding: .5em 1em .5em 1em;
         border-bottom: 0.1em solid #bbb;
     }
 
     .stock {
+        align-self: center;
         background-color: #F4D951;
-        border: 2px solid black;
-        border-radius: 20px;
-        padding: 5px;
         border-width: 1px;
+        border-radius: 15px;
+        text-align: center;
+        color: black;
+        font-weight: 500;
+        width: 70%;
+        padding: auto 2em;
+        margin: auto;
       }
+
+    .stock-heading {
+        text-align: center;
+    }
       
 }
 
