--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -104,3 +104,8 @@ $border-color: rgba(140, 140, 140, .5);
     display: flex;
     justify-content: space-between;
   }
+
+  .logo {
+    border-radius: 50%;
+    margin-right: 1em;
+  }
