--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -49,12 +49,46 @@ table {
     }
 
     td {
-        width: 50%;
+        width: 40%;
         margin-top: 0.5em;
         text-align: left;
         float: left;
         margin-bottom: 1em;
-        border-bottom: 0.1em solid #bbb;
+        display: flex;
+        align-items: center;
+    }
+
+    .quick-font {
+        font-size: 1rem;
+      margin-top: 7%;
+    }
+
+    .awesome-icon {
+        width: 20% !important;
+        padding: 3%;
+
+    div {
+        width: 2.5em;
+        height: 2.5em;
+        border-radius: 50%;
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+
+    .icon {
+        margin: 0 auto;
+        text-align: center;
+        align-self: center;
+    }
+
+    }
+    
+    }
+
+    .line {
+        border-bottom: 1px solid #fff;;
     }
 
 }
