--- a/src/components/credentials/credentials.scss
+++ b/src/components/credentials/credentials.scss
@@ -1,8 +1,59 @@
+.welcome-message-container {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 40%;
+  right: 60%;
+  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background-size: cover;
+  color: #ffffff;
+}
+.form-container {
+  position: relative;
+  left: 48%;
+	top: 0;
+  padding: 10% 10%;
+}
+.welcome-message {
+  position: absolute;
+	display: flex;
+  flex-direction: column;
+	justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0 12%;
+  padding-top: 28%;
+ 
+}
+.welcome-message h1 {
+  padding-top: 2rem;
+  font-size: 3em;
+  font-weight: 900;
+}
+.welcome-message h3 {
+  padding-top: .5em;
+  font-weight: 700;
+}
+.welcome-message p {
+  padding: 3em 0;
+  width: 70%;
+  text-align: justify;
+  font-size: larger;
+}
+.welcome-message-footer {
+  display: flex;
+  margin-top: 32%;
+  align-items: center;
+  justify-content: center;
+}
+.welcome-message-footer text {
+  padding-right: 1rem;
+}
 .sign-login-div {
-    width: 500px;
+    width: 250%;
     margin: auto !important;
     border: none;
-    padding: 3em 3em;
+    padding: 30%;
     border-radius: 10px;
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     box-shadow: 3px 3px 5px rgba(0,0,0,0.5);
@@ -45,9 +96,10 @@
     margin-top: 7%;
     border: none;
     height: 50px;
-    background-color: #250844;
-    color: #fff;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+    background-color: #EFC90A;
+    color: #000;
+    box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.3);
+
     float: left;
     position: relative;
   }
