--- a/src/components/credentials/credentials.scss
+++ b/src/components/credentials/credentials.scss
@@ -15,7 +15,7 @@
   padding: 10% 10%;
 }
 .welcome-message {
-  position: absolute;
+  position: relative;
 	display: flex;
   flex-direction: column;
 	justify-content: center;
@@ -23,15 +23,14 @@
   text-align: center;
   padding: 0 12%;
   padding-top: 28%;
- 
 }
 .welcome-message h1 {
-  padding-top: 2rem;
+  padding-top: 5%;
   font-size: 3em;
   font-weight: 900;
 }
 .welcome-message h3 {
-  padding-top: .5em;
+  padding-top: 2%;
   font-weight: 700;
 }
 .welcome-message p {
@@ -41,10 +40,15 @@
   font-size: larger;
 }
 .welcome-message-footer {
+  margin: auto;
+  padding: 0 12%;
+  position: absolute;
+  bottom: 5%;
   display: flex;
-  margin-top: 32%;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  text-align: center;
+  left: 10%;
 }
 .welcome-message-footer text {
   padding-right: 1rem;
