--- a/src/components/credentials/credentials.scss
+++ b/src/components/credentials/credentials.scss
@@ -1,4 +1,6 @@
 .welcome-message-container {
+  justify-content: center;
+  align-items: center;
   position: absolute;
   top: 0;
   height: 100%;
@@ -40,18 +42,16 @@
   font-size: larger;
 }
 .welcome-message-footer {
-  margin: auto;
-  padding: 0 12%;
   position: absolute;
+  width: 100%;
   bottom: 5%;
   display: flex;
-  justify-content: center;
+	justify-content: center;
   align-items: center;
   text-align: center;
-  left: 10%;
 }
 .welcome-message-footer text {
-  padding-right: 1rem;
+  padding-right: 2rem;
 }
 .sign-login-div {
     width: 250%;
@@ -66,7 +66,6 @@
   .sign-login-div input {
     padding: 3%;
     margin: auto;
-    margin-top: 1%;
     background: transparent;
     border: 0;
     border-bottom: 2px solid #FFFFFF;
