--- a/src/App.scss
+++ b/src/App.scss
@@ -53,22 +53,12 @@ a {
   clear: both;
 }
 
-.pt-3 {
-  left: 110%;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  font-weight: 600;
-  
-}
-.pt-4 {
+.copywrite-text {
   left: 58%;
-  position: absolute;
   margin: 0;
   bottom: 5%;
-  display: flex;
 	justify-content: center;
+  text-align: center;
   font-weight: 600;
 }
 .home-contents {
