--- a/src/components/credentials/credentials.scss
+++ b/src/components/credentials/credentials.scss
@@ -1,93 +1,37 @@
-.welcome-message-container {
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 40%;
-  right: 60%;
-  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  background-size: cover;
-  color: #ffffff;
-}
-.form-container {
-  position: relative;
-  left: 48%;
-	top: 0;
-  padding: 10% 10%;
-}
-.welcome-message {
-  position: relative;
-	display: flex;
-  flex-direction: column;
-	justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 0 12%;
-  padding-top: 28%;
-}
-.welcome-message h1 {
-  padding-top: 5%;
-  font-size: 3em;
-  font-weight: 900;
-}
-.welcome-message h3 {
-  padding-top: 2%;
-  font-weight: 700;
-}
-.welcome-message p {
-  padding: 3em 0;
-  width: 70%;
-  text-align: justify;
-  font-size: larger;
-}
-.welcome-message-footer {
-  position: absolute;
-  width: 100%;
-  bottom: 5%;
-  display: flex;
-	justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-.welcome-message-footer text {
-  padding-right: 2rem;
-}
 .sign-login-div {
-    width: 250%;
-    margin: auto !important;
-    border: none;
-    padding: 30%;
-    border-radius: 10px;
-    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-    box-shadow: 3px 3px 5px rgba(0,0,0,0.5);
-  }
+  width: 50%;
+  margin: 10vh auto auto auto;
+  padding: 5%;
+  border-radius: 10px;
+  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+}
 
-  .sign-login-div input {
-    padding: 3%;
-    margin: auto;
-    background: transparent;
-    border: 0;
-    border-bottom: 2px solid #FFFFFF;
-    border-radius: 0%;
-    color: white;
-    font-weight: 600;
-  }
+.sign-login-div input {
+  padding: 3%;
+  margin: auto;
+  background: transparent;
+  border: 0;
+  border-bottom: 2px solid #FFFFFF;
+  border-radius: 0%;
+  color: white;
+  font-weight: 600;
+}
 
-  .form-control:focus {
-    background-color: blueviolet;
-  }
+.form-control:focus {
+  background-color: blueviolet;
+}
 
-  .sign-login-div input::placeholder {
-    color: #FFFFFFEE;
-  }
+.sign-login-div input::placeholder {
+  color: #FFFFFFEE;
+}
 
-  .sign-login-div input:focus {
-    outline: none;
-    background-color: transparent;
-    color: #fff;
-    border: none;
-  }
+.sign-login-div input:focus {
+  outline: none;
+  background-color: transparent;
+  color: #fff;
+  border: none;
+}
 
 .credential-button {
   width: 100% !important;
@@ -96,22 +40,22 @@
 }
 
 .signup-button {
-    margin-top: 7%;
-    border: none;
-    height: 50px;
-    background-color: #EFC90A;
-    color: #000;
-    box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.3);
+  margin-top: 7%;
+  border: none;
+  height: 50px;
+  background-color: #EFC90A;
+  color: #000;
+  box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.3);
 
-    float: left;
-    position: relative;
-  }
-  
-  .signup-button:hover {
-    background-color: #ffffff;
-    color: black;
-  }
+  float: left;
+  position: relative;
+}
 
-  input:focus {
-    border: none;
-  }
+.signup-button:hover {
+  background-color: #ffffff;
+  color: black;
+}
+
+input:focus {
+  border: none;
+}
