--- a/src/App.scss
+++ b/src/App.scss
@@ -65,7 +65,8 @@ a {
 }
 
 .welcome-message-container {
-  width: 40%;
+  height: 100vh;
+  width: 50%;
   margin: 0% auto 0% 0%;
   background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
   background-size: cover;
@@ -74,8 +75,6 @@ a {
 
 
 .welcome-message {
-  position: relative;
-	display: flex;
   flex-direction: column;
 	justify-content: center;
   align-items: center;
@@ -94,19 +93,16 @@ a {
 }
 .welcome-message p {
   padding: 3em 0;
-  width: 70%;
-  text-align: justify;
+  text-align: left;
   font-size: larger;
 }
 .welcome-message-footer {
-  width: 100%;
-  bottom: 5%;
-  display: flex;
-	justify-content: center;
-  align-items: center;
-  text-align: center;
+  
+margin: 10% 0 0 0;
 }
-
+.welcome-message-footer text {
+  margin: 0 3% 0 0; 
+}
 .credentials-divs {
   width: 100%;
 }
