positioning of hte background image

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,8 +3,8 @@
 .App {
   text-align: center;
   height: 100vh;
-  background-image: url('./assets/bg-images/background-decoration-portrait.svg'),
-  linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%),;
+  background-image: url('./assets/bg-images/background-decoration.svg'),
+  linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   background-repeat: no-repeat;
   background-size: cover;
 }
