--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -13,3 +13,9 @@ body {
   font-family: Roboto, arial, sans-serif;
   font-weight: 400;
 }
+
+div {
+  font-size: 1.32vmax;
+  height: 2.32vmax;
+
+}
